# python-eufy-security

./: .bandit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  API.md  AUTHORS.md  LICENSE  Makefile  Pipfile  README.md  example.py  index.html  openapi.yaml  pyproject.toml  requirements_test.txt  setup.py
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yaml
eufy_security/: __init__.py  __version__.py  api.py  camera.py  converters.py  device.py  errors.py  param.py  params.py  station.py  types.py
eufy_security/p2p/: connection_manager.py  discovery.py  lib32100.py  session.py  types.py
examples/: __init__.py  test_api.py  test_p2p.py
script/: release  test
tests/: __init__.py  common.py  conftest.py  const.py  test_api.py  test_camera.py  test_converters.py  test_device.py  test_param.py  test_params.py  test_types.py
tests/fixtures/: __init__.py  camera.py  devices_list_response.json  history_response.json  hub_list_response.json  login_failure_invalid_email_response.json  login_failure_invalid_password_response.json  start_stream_response.json  stop_stream_response.json  upload_devs_params_response.json
